<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="uk.co.paul_matthews.kotlinandroid.MainActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/info_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_alignParentStart="true"
        android:padding="8dp"
        />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="?android:colorBackground"
        >
        <EditText
            android:id="@+id/username_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/username_field"
            app:layout_constraintBottom_toTopOf="@+id/first_name_field"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toEndOf="@+id/username_label"
            tools:layout_editor_absoluteY="363dp" />

        <TextView
            android:id="@+id/username_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="TextView"
            android:textAppearance="@android:style/TextAppearance.Widget.TextView"
            app:layout_constraintBaseline_toBaselineOf="@+id/username_field"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:layout_editor_absoluteY="307dp"
            tools:text="@string/username_label" />

        <EditText
            android:id="@+id/first_name_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/first_name_field"
            app:layout_constraintBottom_toTopOf="@+id/last_name_field"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/first_name_label" />

        <TextView
            android:id="@+id/first_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="TextView"
            android:textAppearance="@android:style/TextAppearance.Widget.TextView"
            app:layout_constraintBaseline_toBaselineOf="@+id/first_name_field"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/first_name_label" />

        <EditText
            android:id="@+id/last_name_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/last_name_field"
            app:layout_constraintBottom_toTopOf="@+id/reset"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/last_name_label" />

        <TextView
            android:id="@+id/last_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="TextView"
            android:textAppearance="@android:style/TextAppearance.Widget.TextView"
            app:layout_constraintBaseline_toBaselineOf="@+id/last_name_field"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteX="60dp"
            tools:layout_editor_absoluteY="522dp"
            tools:text="@string/last_name_label" />

        <Button
            android:id="@+id/submit"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="8dp"
            android:text="@string/submit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/reset" />

        <Button
            android:id="@+id/reset"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            android:text="@string/reset"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/submit"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteX="39dp" />
    </android.support.constraint.ConstraintLayout>
</RelativeLayout>
